--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,7 @@
 			<em><a href="{{ url.url_for('edit_publication', post.post_url) }}">edit</a></em>
 		{% endif %}
 		</p>
+		<span class="disqus-count-text">Comments</span>
 		</div>
 	{% endfor %}
 	<div align=center>
@@ -52,13 +53,18 @@
 			<a href = "{{ url.url_for('home')}}?page={{pagination.right}}"><span class="glyph general-enclosed">u</span></a>
 		{% endif %}
 	</div>
-	<script>
-	$(
-		function()
-		{
-			
-		}
-	);
-	</script>
+{% endblock %}
+{% block script %}
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'example'; // required: replace example with your forum shortname
 
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
 {% endblock %}
