--- a/templates/index.html
+++ b/templates/index.html
@@ -34,16 +34,16 @@
 	</style>
 	{% for post in posts_data %}
 		<div class="legal">
-		<h2><a href="{{ url.url_for('view_publication', post.post_url) }}#disqus_thread">{{ post.post_title }}</a></h2>
+		<h2><a href="{{ url.url_for('view_publication', post.post_url) }}">{{ post.post_title }}</a></h2>
 		{{ post.post_body }}
 		<p><em>{{ post.post_date }}</em>
 		{% if users.get_user() %}
 			<em><a href="{{ url.url_for('edit_publication', post.post_url) }}">edit</a></em>
 		{% endif %}
-		</p>
-		Zero Comments: 0 <span class="disqus-count-text">Comments</span>
-		One Comment: 1 <span class="disqus-count-text">Comment</span>
-		Multiple Comments: {num} <span class="disqus-count-text">Comments</span>
+		</p>		
+		<span class="disqus-count-text">
+			<a href="{{ url.url_for('view_publication', post.post_url) }}#disqus_thread">Comments</a>
+		</span>		
 		</div>
 	{% endfor %}
 	<div align=center>
