--- a/templates/view_publication.html
+++ b/templates/view_publication.html
@@ -15,13 +15,19 @@
 		{% endif %}
 		</p>
 		</dv>
-		<!-- START: Livefyre Embed -->
-			<script type='text/javascript' src='http://zor.livefyre.com/wjs/v1.0/javascripts/livefyre_init.js'></script>
-			<script type='text/javascript'>
-    		var fyre = LF({
-        		site_id: 304829
-    		});
-			</script>
-		<!-- END: Livefyre Embed -->
+		<div id="disqus_thread"></div>
+			<script type="text/javascript">
+    		/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    		var disqus_shortname = 'tnek'; // required: replace example with your forum shortname
+
+		    /* * * DON'T EDIT BELOW THIS LINE * * */
+    		(function() {
+        		var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        		dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    		})();
+		</script>
+		<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+		<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 {% endblock %}
 
