--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,8 @@
 		{% if users.get_user() %}
 			<em><a href="{{ url.url_for('edit_publication', post.post_url) }}">edit</a></em>
 		{% endif %}
-		</p>			
+		</p>		
+		<a href="{{ url.url_for('edit_publication', post.post_url) }}#disqus_thread">Коментарі</a>	
 		</div>
 	{% endfor %}
 	<div align=center>
@@ -54,5 +55,16 @@
 	</div>
 {% endblock %}
 {% block script %}
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'tnek'; // required: replace example with your forum shortname
 
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
 {% endblock %}
