--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
 	</div>
 {% endblock %}
 
-{% block script %}
+{% block scripts %}
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = 'tnek'; // required: replace example with your forum shortname
