--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
       <link href= "{{ url.url_for('static', '/fonts/foundation-icons-general-enclosed.ttf') }}" rel="stylesheet" type="text/css">
       <link href= "{{ url.url_for('static', '/fonts/foundation-icons-general-enclosed.svg') }}" rel="stylesheet" type="text/css">
       <link rel="stylesheet" href= "{{ url.url_for('static', 'foundation-icons-general-enclosed.css') }}" >
+      <link rel="alternate" type="application/rss+xml" title="самописний блог" href="http://feeds2.feedburner.com/nek/taras?format=xml" />  
+      <link rel="alternate" type="application/atom+xml" title="самописний блог" href="http://feeds2.feedburner.com/nek/taras" />
       <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
       {% block head %}{% endblock %}
     </head>
