--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,7 @@
     <footer id="footer">
         <ul class="cf">
             <li><a href="https://github.com/taras1k/blog" target="_blank">git</a></li>
+            <li><a href="mailto:i@taras.nek.me" target="_blank">пошта</a></li>
         </ul>
     </footer>
     {% endblock %}
