--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,11 @@
       <meta content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport" />
       <meta content="yes" name="apple-mobile-web-app-capable" />
       <meta content="chrome=1" http-equiv="X-UA-Compatible" />
-      <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-      <link href= "{{ url.url_for('static', 'style.css') }}" rel="stylesheet" type="text/css">
-      <link href= "{{ url.url_for('static', '/fonts/foundation-icons-general-enclosed.eot') }}" rel="stylesheet" type="text/css">
-      <link href= "{{ url.url_for('static', '/fonts/foundation-icons-general-enclosed.woff') }}" rel="stylesheet" type="text/css">
-      <link href= "{{ url.url_for('static', '/fonts/foundation-icons-general-enclosed.ttf') }}" rel="stylesheet" type="text/css">
-      <link href= "{{ url.url_for('static', '/fonts/foundation-icons-general-enclosed.svg') }}" rel="stylesheet" type="text/css">
-      <link rel="stylesheet" href= "{{ url.url_for('static', 'foundation-icons-general-enclosed.css') }}" >
+      <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+      <!--[if lt IE 9]>
+        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <![endif]-->
+      <link href="{{ url.url_for('static', '/bootstrap/css/bootstrap.css') }}" rel="stylesheet">
       <link rel="alternate" type="application/rss+xml" title="самописний блог" href="http://feeds2.feedburner.com/nek/taras?format=xml" />  
       <link rel="alternate" type="application/atom+xml" title="самописний блог" href="http://feeds2.feedburner.com/nek/taras" />
       <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -20,35 +18,37 @@
     </head>
 <body class="{% block page_type %}{% endblock %}">
 
-<div id="wrapper">
 
-    <header id="header" class="cf">
-        <ul class="cf">
-            <li><a href="/">Самописний блог</a></li>
-        </ul>
-
-        <ul class="nav cf">
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="/">Самописний блог</a>
+          <div class="nav-collapse">
+            <ul class="nav">
             {% block header %}{% endblock %}
             {%if users.get_user() %}
-              <li class="signIn"><a class="signIn" href="{{url.url_for('logout')}}">вийти</a></li>
-            {%endif%}
-        </ul>
-    </header>
-
-<div id="content" class="display_always">
-    <div id="about">
-      {% block content %}{% endblock %}        
+              <li class="signIn"><a href="{{url.url_for('logout')}}">вийти</a></li>
+            {%endif%}              
+            </ul>
+            <ul class="nav pull-right">
+                <li><a href="https://github.com/taras1k/blog" target="_blank">git</a></li>
+                <li><a href="mailto:taras@nek.me" target="_blank">пошта</a></li>
+          </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
     </div>
-</div>
 
-      {% block footer %}
-    <footer id="footer">
-        <ul class="cf">
-            <li><a href="https://github.com/taras1k/blog" target="_blank">git</a></li>
-            <li><a href="mailto:taras@nek.me" target="_blank">пошта</a></li>
-        </ul>
-    </footer>
-    {% endblock %}
+    <div class="container">
+
+      {% block content %}{% endblock %} 
+
+    </div> <!-- /container -->
 
 </div>
 {% block scripts %}{% endblock %}  
