--- a/templates/index.html
+++ b/templates/index.html
@@ -12,51 +12,30 @@
 
 
 {% block content %}
-	<style>
-	  * { margin: 0; padding: 0; }
-	  body { background: #eee; font-family: "HelveticaNeue", "Helvetica Neue", "Helvetica", Arial, sans-serif; }
-	  .container { padding: 40px; margin: 0 auto; width: 980px; background: #fff; }
-	  h1 { text-align: center; margin-bottom: 10px; font-size: 40px; }
-	  hr { border: solid 1px; border-color: #bbb transparent transparent transparent; }
-	  ul { list-style: none; margin-left: 24px; overflow: hidden; margin-top: 20px; }
-	  ul li { float: left; margin-bottom: 30px; margin-right: 68px; }
-	  ul li p { text-align: center; margin-top: 14px; color: #555; font-weight: bold; font-size: 18px; }
-	  ul li.last-in-row { margin-right: 0; }
-	  
-	  .glyph { cursor: default; font-size: 16px; line-height: 1; }
-	  .glyph.general-enclosed { font-family: "FoundationIconsGeneralEnclosed"; }
-	  
-	  ul li span { font-size: 96px !important; }
-	  div.code { background: #222; }
-	  div.code pre { color: #fff; padding: 30px; }
-	  .class { color: #0088ee; }
-	  em { color: #aaa; }
-	</style>
 	{% for post in posts_data %}
-		<div class="legal">
+	<div class="hero-unit">
 		<h2><a href="{{ url.url_for('view_publication', post.post_url) }}">{{ post.post_title }}</a></h2>
-		{{ post.post_body }}
-		<p><em>{{ post.post_date }}</em>
+		<p>{{ post.post_body }}</p>
+		<em>{{ post.post_date }}</em>
 		{% if users.get_user() %}
 			<em><a href="{{ url.url_for('edit_publication', post.post_url) }}">редагувати</a></em>
 		{% endif %}
 		<em><a href="{{ url.url_for('view_publication', post.post_url) }}#disqus_thread" >Коментарі</a></em>
-		</div>
-		</p>	
-	{% endfor %}
-	<div align=center>
-		{% if pagination.left is defined %}
-		<div class="next">
-			<a href = "{{ url.url_for('home')}}?page={{pagination.left}}"><span class="glyph general-enclosed">v</span></a>
-		</div>	
-		{% endif %}
-    
-		{% if pagination.right is defined %}
-		<div class="prev">
-			<a href = "{{ url.url_for('home')}}?page={{pagination.right}}"><span class="glyph general-enclosed">u</span></a>
-		</div>
-		{% endif %}
 	</div>
+	{% endfor %}
+	<ul class="pager">
+		{% if pagination.left is defined %}
+    	<li class="previous">
+    		<a href="{{ url.url_for('home')}}?page={{pagination.left}}">&larr; Новіші</a>
+    	</li>
+    	{% endif %}
+    	{% if pagination.right is defined %}
+    	<li class="next">
+    		<a href="{{ url.url_for('home')}}?page={{pagination.right}}">Старіші &rarr;</a>
+    	</li>
+    	{% endif %}
+    </ul>
+	
 {% endblock %}
 
 {% block scripts %}
