--- a/templates/view_page.html
+++ b/templates/view_page.html
@@ -6,13 +6,12 @@
 
 
 {% block content %}
-		<div class="legal">
+		<div class="hero-unit">
 		<h2>{{ data.post_title }}</h2>
-		{{ data.post_body }}
+		<p>{{ data.post_body }}</p>
 		{% if users.get_user() %}
 			<em><a href="{{ url.url_for('edit_publication', data.post_url) }}">edit</a></em>
-		{% endif %}
-		</p>
-		</dv>		
+		{% endif %}		
+		</div>		
 {% endblock %}
 
