--- a/templates/404.html
+++ b/templates/404.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block content %}
-		<div class="legal">
-		<h2>Нема такого</h2>
-		</dv>
+		<div class="hero-unit">
+		<h1>Нема такого</h1>
+		</div>
 {% endblock %}
 
