--- a/templates/view_publication.html
+++ b/templates/view_publication.html
@@ -11,7 +11,7 @@
 		<p>{{ data.post_body }}</p>
 		<em>{{ data.post_date }}</em>
 		{% if users.get_user() %}
-			<em><a href="{{ url.url_for('edit_publication', data.post_url) }}">edit</a></em>
+			<em><a href="{{ url.url_for('edit_publication', data.post_url) }}">редагувати</a></em>
 		{% endif %}
 		<div id="disqus_thread"></div>
 			<script type="text/javascript">
