--- a/templates/add_edit_publication.html
+++ b/templates/add_edit_publication.html
@@ -63,7 +63,7 @@
                         {% endif %}
                         </button>
                         {% if is_edit %}
-                          <a href="{{url.url_for('delete_publication', post.post_url)}}" class="btn btn-danger" ></a>
+                          <a href="{{url.url_for('delete_publication', post.post_url)}}" class="btn btn-danger" >Видалити</a>
                         {% endif %}
               </div>
         </form>
