text input style

--- a/templates/add_edit_publication.html
+++ b/templates/add_edit_publication.html
@@ -30,7 +30,7 @@
                     <input name="post_title" id="post_title" placeholder="Заголовок"  type="pub_title" autocapitalize="off" autocorrect="off" tabindex="2" maxlength="254" value="{{ post.post_title }}" />
 					<label for="post_body">Текст</label>
 					<div class="yui-skin-sam">
-						<textarea name="post_body" tabindex="3" id="msgpost" cols="50" rows="10">
+						<textarea name="post_body" tabindex="3" id="msgpost" class="input-xlarge">
     					{{ post.post_body }}
 						</textarea>
 					</div>
