--- a/templates/add_edit_publication.html
+++ b/templates/add_edit_publication.html
@@ -1,6 +1,17 @@
 {% extends "base.html" %}
 
 {% block head %}
+<!-- Skin CSS file -->
+<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.9.0/build/assets/skins/sam/skin.css">
+<!-- Utility Dependencies -->
+<script src="http://yui.yahooapis.com/2.9.0/build/yahoo-dom-event/yahoo-dom-event.js"></script> 
+<script src="http://yui.yahooapis.com/2.9.0/build/element/element-min.js"></script> 
+<!-- Needed for Menus, Buttons and Overlays used in the Toolbar -->
+<script src="http://yui.yahooapis.com/2.9.0/build/container/container_core-min.js"></script>
+<script src="http://yui.yahooapis.com/2.9.0/build/menu/menu-min.js"></script>
+<script src="http://yui.yahooapis.com/2.9.0/build/button/button-min.js"></script>
+<!-- Source file for Rich Text Editor-->
+<script src="http://yui.yahooapis.com/2.9.0/build/editor/editor-min.js"></script>
 <link rel="stylesheet" href="http://yandex.st/jquery-ui/1.8.15/themes/redmond/jquery.ui.all.min.css">
 <script src="http://yandex.st/jquery/1.7.1/jquery.js"></script>
 <script src="http://yandex.st/jquery-ui/1.8.16/jquery-ui.js"></script>
@@ -30,7 +41,7 @@
                     <input name="post_title" id="post_title" placeholder="Заголовок"  type="pub_title" autocapitalize="off" autocorrect="off" tabindex="2" maxlength="254" value="{{ post.post_title }}" />
 					<label for="post_body">Текст</label>
 					<div class="yui-skin-sam">
-						<textarea name="post_body" tabindex="3" id="msgpost" class="input-xlarge">
+						<textarea name="post_body" tabindex="3" id="msgpost" cols="50" rows="10">
     					{{ post.post_body }}
 						</textarea>
 					</div>
@@ -59,4 +70,22 @@
 
         {{ post }}
 
+{% endblock %}
+
+{% block scripts %}
+<script type='text/javascript'>
+  $(document).ready(function() {
+       $("#post_date").datetimepicker();
+    var myEditor = new YAHOO.widget.Editor('msgpost', {
+        height: '200px',
+        width: '630px',
+        animate: true //Animates the opening, closing and moving of Editor windows
+    });
+    myEditor.render();
+    $('#post_publication').on('click', function(){
+        myEditor.saveHTML();
+      }
+    );
+  });
+</script>
 {% endblock %}
