--- a/templates/view_publication.html
+++ b/templates/view_publication.html
@@ -8,7 +8,7 @@
 {% block content %}
 		<div class="hero-unit">
 		<h2>{{ data.post_title }}</h2>
-		<p>{{ data.post_body }}</p>
+		{{ data.post_body }}
 		<em>{{ data.post_date }}</em>
 		{% if users.get_user() %}
 			<em><a href="{{ url.url_for('edit_publication', data.post_url) }}">редагувати</a></em>
