--- a/templates/view_publication.html
+++ b/templates/view_publication.html
@@ -8,7 +8,7 @@
 {% block content %}
 		<div class="hero-unit">
 		<h2>{{ data.post_title }}</h2>
-		<div class="post_body">
+		<div class="lead">
 			{{ data.post_body }}
 		</div>
 		<em>{{ data.post_date }}</em>
