--- a/templates/add_edit_publication.html
+++ b/templates/add_edit_publication.html
@@ -39,8 +39,10 @@
         >
                     <label for="post_title">Заголовок</label>
                     <input name="post_title" id="post_title" placeholder="Заголовок"  type="pub_title" autocapitalize="off" autocorrect="off" tabindex="2" maxlength="254" value="{{ post.post_title }}" />
-					<label for="post_body">Текст</label>
-					<div class="yui-skin-sam">
+          <a class="btn" href="">Link</a>
+          <input id="input_style" class="btn" type="button" value="Текс/html" />
+					<label for="post_body">Текст</label>          
+					<div id='msg_div' class="yui-skin-sam">
 						<textarea name="post_body" tabindex="3" id="msgpost" cols="50" rows="10">
     					{{ post.post_body }}
 						</textarea>
@@ -55,7 +57,7 @@
           <label for="post_date">Дата публікації</label>
           <input name="post_date" id="post_date"  type="date" tabindex="5" maxlength="254" value="{{ post.post_date }}"/>
               <div class="btn-group">
-                        <button id="post_publication" class="btn btn-primary" tabindex="5">
+                        <button id="post_publication" class="btn btn-primary" type="Submit" tabindex="5">
                         {% if is_edit %}
                           Зберегти
                         {% else %}
@@ -75,16 +77,31 @@
 {% block scripts %}
 <script type='text/javascript'>
   $(document).ready(function() {
-       $("#post_date").datetimepicker();
+    $("#post_date").datetimepicker();
+    var msg_div = $('msg_div');
     var myEditor = new YAHOO.widget.Editor('msgpost', {
         height: '200px',
         width: '630px',
         animate: true //Animates the opening, closing and moving of Editor windows
     });
+    var state = 'text';
     myEditor.render();
     $('#post_publication').on('click', function(){
         myEditor.saveHTML();
+      }      
+    );
+    $('#input_style').on('click', function(){
+      if(state == 'text')
+      {
+        msg_div.removeClass('yui-skin-sam');
+        myEditor.saveHTML();
+        state = 'html';
+      }else{
+        msg_div.addClass('yui-skin-sam');
+        myEditor.render();
+        state = 'text';
       }
+    }
     );
   });
 </script>
