--- a/templates/base.html
+++ b/templates/base.html
@@ -50,13 +50,13 @@
       </div>    
   
      <div class="about" id="taras1k">
-        <img alt="Тарас Нек" title="Тарас Нек" src="{{ url.url_for('static', 'img/taras1k.css') }}" />
+        <img alt="Тарас Нек" title="Тарас Нек" src="{{ url.url_for('static', 'img/taras1k.png') }}" />
         <h1>Тарас Нек</h1>
         <div class="prof" >python developer</div>
         <div class="ml"><a href="mailto:taras@nek.me" target="_blank">taras [at] nek.me</a></div>
         <div class="social">
         	<a href="http://github.com/taras1k" title="github"  target="_blank"><img alt="github" title="github" src="{{ url.url_for('static', 'img/github.png') }}" /></a>
-        	<a href="http://ua.linkedin.com/in/taras1k" title="linkedin"  target="_blank"><img alt="linkedin" title="linkedin" src="{{ url.url_for('static', 'img/linkefin.png') }}" /></a>
+        	<a href="http://ua.linkedin.com/in/taras1k" title="linkedin"  target="_blank"><img alt="linkedin" title="linkedin" src="{{ url.url_for('static', 'img/linkedin.png') }}" /></a>
         	<a href="http://twitter.com/taras1k" title="twitter"  target="_blank"><img alt="twitter" title="twitter" src="{{ url.url_for('static', 'img/twitter.png') }}" /></a>
         	<a href="http://www.facebook.com/taras1k" title="facebook"  target="_blank"><img alt="facebook" title="facebook" src="{{ url.url_for('static', 'img/facebook.png') }}" /></a>
         </div>
