--- a/templates/view_publication.html
+++ b/templates/view_publication.html
@@ -6,6 +6,7 @@
 
 
 {% block content %}
+        <meta name="description" content="{{ data.post_body[:100] }}..." />
 		<div class="hero-unit">
 		<h2>{{ data.post_title }}</h2>
 		<div class="lead">
