--- a/templates/view_publication.html
+++ b/templates/view_publication.html
@@ -4,9 +4,12 @@
 {{ data.post_title }}
 {% endblock %}
 
+{% block head %}
+        <meta name="description" content="{{ data.post_body[:100] }}..." />
+{% endblock %}
+
 
 {% block content %}
-        <meta name="description" content="{{ data.post_body[:100] }}..." />
 		<div class="hero-unit">
 		<h2>{{ data.post_title }}</h2>
 		<div class="lead">
