--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Блог Тараса Нека (@taras1k) {% block title %}{% endblock %}</title>
+      <title>{% block title %}{% endblock %}Блог Тараса Нека (@taras1k)</title>
       <meta charset="UTF-8">
       <meta content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport" />
       <meta content="yes" name="apple-mobile-web-app-capable" />
